@@ -6,6 +6,8 @@ CCMenu 13.0 (not released yet)
 * CCMenu now registers its own URL schemes. This makes it possible to create
   links on webpages that, when clicked, will open CCMenu and show a prefilled
   list of projects to add.
+* When adding or removing projects, the build timing for other projects is
+  now retained.
 * It is now possible to use a proxy when accessing CI servers that require
   authentication. Attempting this before triggered a bug in Apple's libraries,
   and this version of CCMenu adds a workaround for that bug.
